Disable fixed navbar on mobile. Make text fit bigger screens.

--- a/styles/global.css
+++ b/styles/global.css
@@ -11,9 +11,8 @@ body {
 
 
 img {
-    height: 400px;
+    max-height: 400px;
     max-width: 100%;
-    margin-right: 20px;
 }
 
 
@@ -67,12 +66,28 @@ footer:hover {
 
 
 .navbar {
-    position: fixed;
-    top: 0;
     width: 100%;
     background-color: #1B8195;
     color: white;
     z-index: 1000;
+}
+
+/* Only large screens should have a navbar that follows you */
+@media (min-width: 600px){
+    .navbar{
+        position: fixed;
+        top: 0;
+    }
+
+    .container{
+        /* We need these: top margin to compensate for fixed navbar (otherwise the container moves behind it). Side margin so the content doesn't hug the sides. */
+        margin: 80px 20px;
+    }
+}
+
+.container{
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .navbar ul {
@@ -108,20 +123,10 @@ section {
     margin: 20px;
 }
 
-.container {
-    /* We need these: top margin to compensate for fixed navbar (otherwise the container moves behind it). Side margin so the content doesn't hug the sides. */
-    margin: 80px 20px;
-}
 
-
-
-@media screen and (max-width: 1024px) {
-
-    p,
-    ol {
-        width: 100%;
-        font-size: 20px;
-    }
+p,
+ol {
+    font-size: 1em;
 }
 
 @media screen and (min-width: 1024px) {
